enhancements to allow for patching of a user profile
