# source/main/generated/swagger_server/controllers/profile_controller.py
@@ -4,6 +4,7 @@ from swagger_server.extensions.mongo_interface import MongoInterface
 from swagger_server.models.profile import Profile  # noqa: E501
 from swagger_server import util
 
+profile_attributes = ["profile_name"]
 
 def add_profile(body):  # noqa: E501
     """create a profile
@@ -30,6 +31,8 @@ def get_profile(profile_id):  # noqa: E501
 
     :rtype: Profile
     """
+    m_interface = MongoInterface()
+    return m_interface.get_profile_by_id(profile_id)
     return 'do some magic!'
 
 
@@ -42,6 +45,39 @@ def get_session_profile():  # noqa: E501
     :rtype: Profile
     """
     print("look at profiles for user: " + str(connexion.request.authorization))
-    print("found profile: " + str(connexion.request.authorization["profile"]))
-    response = Profile.from_dict(connexion.request.authorization["profile"])
-    return response
+    print("found profile: " + connexion.request.authorization["user_profile"])
+    #profile_id = Profile.from_dict(connexion.request.authorization["user_profile"])
+    response = get_profile(connexion.request.authorization["user_profile"])
+    print("respondo: " + str(response))
+    return_profile = Profile.from_dict(response)
+    return return_profile
+
+
+def patch_profile(body, profile_id):  # noqa: E501
+    """update attributes of a profile
+
+     # noqa: E501
+
+    :param body: 
+    :type body: dict | bytes
+    :param profile_id: ID of profile to return
+    :type profile_id: str
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = Profile.from_dict(connexion.request.get_json())  # noqa: E501
+
+    print ("looking at patch for " + profile_id)
+    set_values = {}
+    persist_changes = False
+    if body.profile_name is not None:
+        set_values['profile_name'] = body.profile_name
+        print ("setting value for profile_name to " + set_values['profile_name'])
+        persist_changes = True
+
+    if persist_changes:
+        print ("submit to mongo")
+        m_interface = MongoInterface()
+        m_interface.patch_profile(profile_id, set_values)
+    return 'do some magic!'
