# source/main/generated/swagger_server/models/profile.py
@@ -14,11 +14,11 @@ class Profile(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, profile_id: str=None, profile_name: str=None, identity_issuer: str=None, identity_id: str=None, connections: List[str]=None):  # noqa: E501
+    def __init__(self, id: str=None, profile_name: str=None, identity_issuer: str=None, identity_id: str=None, connections: List[str]=None):  # noqa: E501
         """Profile - a model defined in Swagger
 
-        :param profile_id: The profile_id of this Profile.  # noqa: E501
-        :type profile_id: str
+        :param id: The id of this Profile.  # noqa: E501
+        :type id: str
         :param profile_name: The profile_name of this Profile.  # noqa: E501
         :type profile_name: str
         :param identity_issuer: The identity_issuer of this Profile.  # noqa: E501
@@ -29,7 +29,7 @@ class Profile(Model):
         :type connections: List[str]
         """
         self.swagger_types = {
-            'profile_id': str,
+            'id': str,
             'profile_name': str,
             'identity_issuer': str,
             'identity_id': str,
@@ -37,13 +37,13 @@ class Profile(Model):
         }
 
         self.attribute_map = {
-            'profile_id': 'profile_id',
+            'id': '_id',
             'profile_name': 'profile_name',
             'identity_issuer': 'identity_issuer',
             'identity_id': 'identity_id',
             'connections': 'connections'
         }
-        self._profile_id = profile_id
+        self._id = id
         self._profile_name = profile_name
         self._identity_issuer = identity_issuer
         self._identity_id = identity_id
@@ -61,25 +61,25 @@ class Profile(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def profile_id(self) -> str:
-        """Gets the profile_id of this Profile.
+    def id(self) -> str:
+        """Gets the id of this Profile.
 
 
-        :return: The profile_id of this Profile.
+        :return: The id of this Profile.
         :rtype: str
         """
-        return self._profile_id
+        return self._id
 
-    @profile_id.setter
-    def profile_id(self, profile_id: str):
-        """Sets the profile_id of this Profile.
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this Profile.
 
 
-        :param profile_id: The profile_id of this Profile.
-        :type profile_id: str
+        :param id: The id of this Profile.
+        :type id: str
         """
 
-        self._profile_id = profile_id
+        self._id = id
 
     @property
     def profile_name(self) -> str:
@@ -122,8 +122,6 @@ class Profile(Model):
         :param identity_issuer: The identity_issuer of this Profile.
         :type identity_issuer: str
         """
-        if identity_issuer is None:
-            raise ValueError("Invalid value for `identity_issuer`, must not be `None`")  # noqa: E501
 
         self._identity_issuer = identity_issuer
 
@@ -145,8 +143,6 @@ class Profile(Model):
         :param identity_id: The identity_id of this Profile.
         :type identity_id: str
         """
-        if identity_id is None:
-            raise ValueError("Invalid value for `identity_id`, must not be `None`")  # noqa: E501
 
         self._identity_id = identity_id
 
