# source/main/swagger/swagger.yaml
@@ -97,16 +97,37 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Profile"
+    patch:
+      tags:
+        - "profile"
+      summary: "update attributes of a profile"
+      operationId: "patchProfile"
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: "profileId"
+          in: "path"
+          description: "ID of profile to return"
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Profile'
+      responses:
+        '200':
+          description: OK
 components:
   schemas:
     Profile:
       type: object
       required:
         - profile_name
-        - identity_issuer
-        - identity_id
       properties:
-        profile_id:
+        _id:
           type: "string"
         profile_name:
           type: "string"
@@ -143,4 +164,3 @@ components:
       type: http
       scheme: bearer
 security:
-  - BearerAuth: []
